--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
-    <string name="app_name">Wallet</string>
+    <string name="app_name">MyMenu</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
     <string name="action_settings">Settings</string>
+    <string name="add">Dodaj</string>
+    <string name="cancel">Anuluj</string>
 </resources>
