--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
     <string name="add">Dodaj</string>
     <string name="cancel">Anuluj</string>
+    <string name="PLN">zł</string>
 </resources>
