keyboard mode made

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="add">Dodaj</string>
     <string name="cancel">Anuluj</string>
     <string name="PLN">zł</string>
+    <string name="txt_new_operation">Nowa operacja</string>
+    <string name="search_title">Wyszukaj</string>
 </resources>
