New Wallet, dialog box w MenuActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="nazwa_portfela_PL">Podaj nazwę portfela</string>
     <string name="dodaj_portfel">Dodaj portfel</string>
     <string name="waluta">Waluta:</string>
+    <string-array name="examples">
+        <item>Array item</item>
+        <item>Array item</item>
+        <item>Array item</item>
+    </string-array>
 </resources>
