minor changes in database, some comments on onClicks/onLongClicks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="dodaj_portfel">Dodaj portfel</string>
     <string name="waluta">Waluta:</string>
     <string name="nazwa_kategorii">Nazwa kategorii</string>
+    <string name="new_cat_string">Nowa kategoria</string>
+    <string name="new_wallet_string">Nowy portfel</string>
     <string-array name="examples">
         <item>Array item</item>
         <item>Array item</item>
