--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="new_cat_string">Nowa kategoria</string>
     <string name="new_wallet_string">Nowy portfel</string>
     <string name="edytuj_operacj_txt">Edytuj operację</string>
+    <string name="choose_date">Wybierz datę</string>
     <string-array name="examples">
         <item>Array item</item>
         <item>Array item</item>
