--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="edytuj_operacj_txt">Edytuj operację</string>
     <string name="choose_date">Wybierz datę</string>
     <string name="last_operation_txt">Ostatnie operacje</string>
+    <string name="stan_konta_string">Stan konta:</string>
     <string-array name="examples">
         <item>Array item</item>
         <item>Array item</item>
