--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,11 @@
         <item>Array item</item>
         <item>Array item</item>
     </string-array>
+    <string-array name="currencies">
+        <item>PLN</item>
+        <item>GBP</item>
+        <item>USD</item>
+        <item>CHK</item>
+        <item>AUD</item>
+    </string-array>
 </resources>
