Dodano widoki szablony i nowe szablon(xml + java)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="cancel">Anuluj</string>
     <string name="PLN">zł</string>
     <string name="txt_new_operation">Nowa operacja</string>
+    <string name="new_template">Nowy szablon</string>
     <string name="search_title">Wyszukaj</string>
     <string name="kategorie">Kategorie</string>
     <string name="txt_new_standing_operation">Nowe zlecenie stałe</string>
